Added github link

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
       <button class="btn btn-outline-primary" id="current-location-button">
         Current Location
       </button>
+      <p id="github-link">
+        <a href="https://github.com/misomez/My-weather-app">Open source code</a>
+        by Mary An Tran
+      </p>
     </div>
     <script src="src/script.js"></script>
   </body>
