Open github link in new tab

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
         Current Location
       </button>
       <p id="github-link">
-        <a href="https://github.com/misomez/My-weather-app">Open source code</a>
+        <a href="https://github.com/misomez/My-weather-app" target="_blank"
+          >Open source code</a
+        >
         by Mary An Tran
       </p>
     </div>
