Added main weather icon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
       </header>
 
       <div class="row current-temp">
-        <div class="col-4 emoji my-auto"><p>🌤</p></div>
+        <div class="col-4 my-auto">
+          <img
+            src="http://openweathermap.org/img/wn/01d@2x.png"
+            alt="Current weather emoji"
+            id="main-emoji"
+          />
+        </div>
         <div class="col-4 my-auto">
           <p>
             <span id="current-degree"> 0 </span>
