Updated from http connection

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="row current-temp">
         <div class="col-4 my-auto">
           <img
-            src="http://openweathermap.org/img/wn/01d@2x.png"
+            src="https://openweathermap.org/img/wn/01d@2x.png"
             alt="Current weather emoji"
             id="main-emoji"
           />
