--- a/index.html
+++ b/index.html
@@ -20,102 +20,107 @@
 
   <body>
     <div class="container">
-      <h6 id="current-time"></h6>
-      <header>
-        <h1>
-          <span id="currently-text">CURRENTLY IN</span>
-          <span id="insert-city">...</span>
-        </h1>
-        <h2 id="current-description"></h2>
-      </header>
+      <div class="weather-container">
+        <header>
+          <h1 id="insert-city">
+            <span id="currently-text">TRAVELLING TO...</span>
+          </h1>
+        </header>
 
-      <div class="row current-temp">
-        <div class="col-4 my-auto">
-          <img
-            src="https://openweathermap.org/img/wn/01d@2x.png"
-            alt="Current weather emoji"
-            id="main-emoji"
+        <div class="row current-temp">
+          <div class="col-4 my-auto">
+            <img
+              src="https://openweathermap.org/img/wn/01d@2x.png"
+              alt="Current weather emoji"
+              id="main-emoji"
+            />
+            <p id="current-description"></p>
+          </div>
+          <div class="col-4 my-auto">
+            <p>
+              <span id="current-degree"> 0</span>
+              <a href="#" class="unit"
+                ><span class="hover" id="hover-C">Cº</span></a
+              ><span class="hover"> | </span
+              ><a href="#" class="unit"
+                ><span class="hover" id="hover-F">Fº</span></a
+              >
+            </p>
+          </div>
+          <div class="col-4 my-auto description">
+            <p>
+              Humidity: <span id="current-humidity"></span> <br />
+              Winds: <span id="current-wind-speed"></span>
+            </p>
+          </div>
+        </div>
+
+        <div class="row future-temp">
+          <div class="col">
+            <div class="card mb-3" style="max-width: 18rem">
+              <p class="card-day">Tomorrow</p>
+              <p class="card-emoji">🌧</p>
+              <p class="card-temp">13Cº</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-3" style="max-width: 18rem">
+              <p class="card-day">Tuesday</p>
+              <p class="card-emoji">⛈</p>
+              <p class="card-temp">10Cº</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-3" style="max-width: 18rem">
+              <p class="card-day">Wednesday</p>
+              <p class="card-emoji">🌧</p>
+              <p class="card-temp">15Cº</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-3" style="max-width: 18rem">
+              <p class="card-day">Thursday</p>
+              <p class="card-emoji">☁️</p>
+              <p class="card-temp">16Cº</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-3" style="max-width: 18rem">
+              <p class="card-day">Friday</p>
+              <p class="card-emoji">☀️</p>
+              <p class="card-temp">20Cº</p>
+            </div>
+          </div>
+        </div>
+
+        <form class="input-group mb-3 mx-auto">
+          <input
+            type="search"
+            class="form-control"
+            placeholder="Where are you?"
+            id="search-input-city"
           />
-        </div>
-        <div class="col-4 my-auto">
-          <p>
-            <span id="current-degree"> 0 </span>
-            <a href="#" class="unit"
-              ><span class="hover" id="hover-C">Cº</span></a
-            ><span class="hover"> | </span
-            ><a href="#" class="unit"
-              ><span class="hover" id="hover-F">Fº</span></a
+          <div class="input-group-append">
+            <button class="btn btn-outline-primary" id="search-submit-button">
+              Search
+            </button>
+          </div>
+        </form>
+        <button class="btn btn-outline-primary" id="current-location-button">
+          Current Location
+        </button>
+      </div>
+      <small>
+        <div class="row credit">
+          <p id="github-link" class="col-6">
+            <a href="https://github.com/misomez/My-weather-app" target="_blank"
+              >Open source code</a
             >
+            by Mary An Tran
           </p>
+          <p id="current-time" class="col-6 text-right"></p>
         </div>
-        <div class="col-4 my-auto description">
-          <p>
-            Humidity: <span id="current-humidity"></span> <br />
-            Winds: <span id="current-wind-speed"></span>
-          </p>
-        </div>
-      </div>
-
-      <div class="row future-temp">
-        <div class="col">
-          <div class="card mb-3" style="max-width: 18rem">
-            <p class="card-day">Tomorrow</p>
-            <p class="card-emoji">🌧</p>
-            <p class="card-temp">13Cº</p>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card mb-3" style="max-width: 18rem">
-            <p class="card-day">Tuesday</p>
-            <p class="card-emoji">⛈</p>
-            <p class="card-temp">10Cº</p>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card mb-3" style="max-width: 18rem">
-            <p class="card-day">Wednesday</p>
-            <p class="card-emoji">🌧</p>
-            <p class="card-temp">15Cº</p>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card mb-3" style="max-width: 18rem">
-            <p class="card-day">Thursday</p>
-            <p class="card-emoji">☁️</p>
-            <p class="card-temp">16Cº</p>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card mb-3" style="max-width: 18rem">
-            <p class="card-day">Friday</p>
-            <p class="card-emoji">☀️</p>
-            <p class="card-temp">20Cº</p>
-          </div>
-        </div>
-      </div>
-
-      <form class="input-group mb-3 mx-auto">
-        <input
-          type="search"
-          class="form-control"
-          placeholder="Where are you?"
-          id="search-input-city"
-        />
-        <div class="input-group-append">
-          <button class="btn btn-outline-primary" id="search-submit-button">
-            Search
-          </button>
-        </div>
-      </form>
-      <button class="btn btn-outline-primary" id="current-location-button">
-        Current Location
-      </button>
-      <p id="github-link">
-        <a href="https://github.com/misomez/My-weather-app" target="_blank"
-          >Open source code</a
-        >
-        by Mary An Tran
-      </p>
+      </small>
     </div>
     <script src="src/script.js"></script>
   </body>
