Initial attempt display forecast function

--- a/index.html
+++ b/index.html
@@ -54,43 +54,8 @@
             </p>
           </div>
         </div>
-        <div class="row future-temp">
-          <div class="col">
-            <div class="card mb-3" style="max-width: 18rem">
-              <p class="card-day">Tomorrow</p>
-              <p class="card-emoji">🌧</p>
-              <p class="card-temp">13Cº</p>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card mb-3" style="max-width: 18rem">
-              <p class="card-day">Tuesday</p>
-              <p class="card-emoji">⛈</p>
-              <p class="card-temp">10Cº</p>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card mb-3" style="max-width: 18rem">
-              <p class="card-day">Wednesday</p>
-              <p class="card-emoji">🌧</p>
-              <p class="card-temp">15Cº</p>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card mb-3" style="max-width: 18rem">
-              <p class="card-day">Thursday</p>
-              <p class="card-emoji">☁️</p>
-              <p class="card-temp">16Cº</p>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card mb-3" style="max-width: 18rem">
-              <p class="card-day">Friday</p>
-              <p class="card-emoji">☀️</p>
-              <p class="card-temp">20Cº</p>
-            </div>
-          </div>
-        </div>
+
+        <div class="row future-temp" id="forecast"></div>
 
         <form class="input-group mb-3 mx-auto">
           <input
