5 day forecast updated

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             </p>
           </div>
         </div>
-
+        <div id="forecast-heading"></div>
+        <div class="row future-temp" id="forecast"></div>
         <form class="input-group mb-3 mx-auto">
           <input
             type="search"
@@ -72,7 +73,6 @@
         <button class="btn btn-outline-primary" id="current-location-button">
           Current Location
         </button>
-        <div class="row future-temp" id="forecast"></div>
       </div>
       <small>
         <div class="row credit">
